<resources>
    <string name="app_name">Popular Movies</string>


    <string name="pref_popular_name">Popular</string>
    <string name="pref_top_rated_name">Top Rated</string>
    <string name="pref_favorites_name">Favorites</string>
    <string name="pref_sort_order_title">Sort order</string>
    <string name="pref_sort_order_key">sort_key</string>

    <string name="pref_popular_value">pref_popular_value</string>
    <string name="pref_top_rated_value">pref_top_rated_value</string>
    <string name="action_settings">Settings</string>
    <string name="details_activity_title">Details</string>
    <string name="settings_activity_title">Settings</string>
    <string name="retry">Retry</string>
    <string name="header_title">Title</string>
    <string name="header_release_date">Release Date</string>
    <string name="header_vote_average">Vote Average</string>
    <string name="header_overview">Plot Synopsis</string>
    <string name="overview_not_available">Not Available</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>

    <string name="header_videos">Trailers (%1$d)</string>
    <string name="trailer_item">Watch Trailer %1$d</string>

    <string name="review_item"> Read Review %1$d</string>
    <string name="header_reviews">Reviews (%1$d)</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="author">Author:</string>
    <string name="pref_favorites">favorites_value</string>
    <string name="toast_check_your_internet_connection">Please check your internet connection</string>
    <string name="toast_no_internet_connection">Still no internet connection,please check your connection</string>
    <string name="favorites_empty">Your favorite list is still empty, just click to the star button to add favorites</string>
    <string name="title_menu_share">Share</string>
    <string name="toast_failed_to_retrieve_data">Fail to retrieve data from the server</string>
    <string name="please_wait_poster_download">Poster is still downloading, please wait until it finishes!</string>
    <string name="success_remove_favorites">Movie  was successfully removed</string>
    <string name="fail_remove_favorites">Fail to remove movie from favorites</string>
    <string name="fail_adding_to_favorites">Fail when adding to favorites</string>
    <string name="success_add_favorites">Movie was successfully added to favorites</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="pref_favorites_value" translatable="false">favorites_value</string>
    <string name="ouups">Ouups!!!</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="by_astride_djuikom">By Astride DJUIKOM</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="content_authority">com.example.astri.popularmovies</string>

</resources>
